--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html, body {
-    background: rgb(112,112,112);
-    background: radial-gradient(circle, rgba(112,112,112,1) 0%, rgba(43,43,43,1) 100%);
+    background: rgb(194, 194, 194);
     scroll-behavior: smooth;
     margin: 0px;
     font-family: "sans-serif" monospace;
@@ -19,8 +18,8 @@ html, body {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #000 0%, #000 100%);
+    background: rgb(112,112,112);
+    background: radial-gradient(circle, rgba(112,112,112,1) 0%, rgba(43,43,43,1) 100%);
     font-size: 3em;
     margin-bottom: 100px;
     color: #00c0ff;
