--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    background: rgb(194, 194, 194);
+    background: #2c2c2c;
     scroll-behavior: smooth;
     margin: 0px;
     font-family: "sans-serif" monospace;
